--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8095
+server.http2.enabled=true
 spring.profiles.active=@spring.profiles.active@
 #H2 Database Configuration:
 spring.datasource.url=jdbc:h2:mem:conversion
@@ -16,5 +17,4 @@ spring.jpa.hibernate.ddl-auto=update
 #Spring Doc for Swagger / OpenAPI
 springdoc.swagger-ui.path=/swagger-ui.html
 
-FISCAL_EXCHANGE_API= "https://api.fiscaldata.treasury.gov/services/api/fiscal_service/v1/accounting/od/rates_of_exchange?fields=country_currency_desc,exchange_rate,record_date"
-DATE= "&filter=effective_date:lte:2023-09-22,effective_date:gte:2023-05-01"
+fiscaldata.base.url=https://api.fiscaldata.treasury.gov/services/api/fiscal_service/v1/accounting/od/rates_of_exchange?fields=country_currency_desc,exchange_rate,record_date
