--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -16,5 +16,4 @@ spring.jpa.hibernate.ddl-auto=update
 #Spring Doc for Swagger / OpenAPI
 springdoc.swagger-ui.path=/swagger-ui.html
 
-FISCAL_EXCHANGE_API= "https://api.fiscaldata.treasury.gov/services/api/fiscal_service/v1/accounting/od/rates_of_exchange?fields=country_currency_desc,exchange_rate,record_date"
-DATE= "&filter=effective_date:lte:2023-09-22,effective_date:gte:2023-05-01"
+fiscaldata.base.url=https://api.fiscaldata.treasury.gov/services/api/fiscal_service/v1/accounting/od/rates_of_exchange?fields=country_currency_desc,exchange_rate,record_date
