--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,12 @@
-server.port=8095
-server.http2.enabled=true
+server.port=8080
 spring.profiles.active=@spring.profiles.active@
-#H2 Database Configuration:
-spring.datasource.url=jdbc:h2:mem:conversion
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.h2.console.settings.trace=false
-spring.h2.console.settings.web-allow-others=false
-spring.jpa.show-sql=true
-spring.jpa.format-sql=true
+spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://aws.connect.psdb.cloud/converter
+spring.datasource.username=hsx90cjd9aov9v3g89ss
+spring.datasource.password=pscale_pw_fQFI5O5RjKAv8e5yBe8KKwDsNmwscIp9AUzDJilaMMs
+spring.jpa.show-sql: true
+spring.jpa.format-sql=true
 #Spring Doc for Swagger / OpenAPI
 springdoc.swagger-ui.path=/swagger-ui.html
 
