--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,15 @@
 server.port=8080
 spring.profiles.active=@spring.profiles.active@
+# PlanetScale Database as a Service uses MYSQL8
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql: true
+spring.jpa.format-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://aws.connect.psdb.cloud/converter
-spring.datasource.username=hsx90cjd9aov9v3g89ss
-spring.datasource.password=pscale_pw_fQFI5O5RjKAv8e5yBe8KKwDsNmwscIp9AUzDJilaMMs
-spring.jpa.show-sql: true
-spring.jpa.format-sql=true
+spring.datasource.username=2dnk9sb04r49bial9xwo
+spring.datasource.password=pscale_pw_pGfwiij6wtmou2gD6HaxVEGaIkGqJU2sjrQFaEcWWfc
 #Spring Doc for Swagger / OpenAPI
 springdoc.swagger-ui.path=/swagger-ui.html
 
