--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,19 @@
-server.port=8080
+server.port=8095
+server.http2.enabled=true
 spring.profiles.active=@spring.profiles.active@
-# PlanetScale Database as a Service uses MYSQL8
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql: true
+#H2 Database Configuration:
+spring.datasource.url=jdbc:h2:mem:conversion
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
+spring.jpa.show-sql=true
 spring.jpa.format-sql=true
-spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://aws.connect.psdb.cloud/converter
-spring.datasource.username=gotg7z8q0l3z0j304uzb
-spring.datasource.password=pscale_pw_k6DT8qZXSWmDKt42KdKIVhqtBpmZR60ioQg1C5oeQSd
 #Spring Doc for Swagger / OpenAPI
 springdoc.swagger-ui.path=/swagger-ui.html
 
